--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="/api/placeholder/600/400" alt="Min Jiang - Product Leader">
+                <img src="MIN.jpg" alt="Min Jiang - Product Leader">
             </div>
         </div>
     </section>
