--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
     <section id="story" class="story-section">
         <div class="container story-container">
             <div class="story-image">
-                <img src="/api/placeholder/600/700" alt="My Professional Journey">
+                <img src="mjjourney.png" alt="My Professional Journey">
             </div>
             <div class="story-content">
                 <div class="story-subtitle">MY STORY</div>
