--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="MIN.jpg" alt="Min Jiang - Product Leader">
+                <img src="MIN.jpg" alt="Min Jiang - Product Leader" loading="eager" style="border-radius: 50%; aspect-ratio: 1/1; object-fit: cover;">
             </div>
         </div>
     </section>
